@@ -1,3 +1,8 @@
+2011-08-20  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp.eclass:
+	* elisp-common.eclass: Change [ ] to [[ ]] throughout.
+
 2011-08-12  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-emacs-version): Report error and
